Fixed graphs overflow visible

--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -1,5 +1,11 @@
 @import 'base';
 
+:global {
+  .recharts-surface {
+    overflow: visible;
+  }
+}
+
 .component {
   // Empty
   height: 100%;
